parser.automaton
State 0:
## Known stack suffix:
##
## LR(1) items:
program' -> . program [ # ]
## Transitions:
-- On program shift to state 1
-- On decls shift to state 2
## Reductions:
-- On VOID LIST INT EOF BOOL
--   reduce production decls ->

State 1:
## Known stack suffix:
## program
## LR(1) items:
program' -> program . [ # ]
## Transitions:
## Reductions:
-- On #
--   accept program

State 2:
## Known stack suffix:
## decls
## LR(1) items:
decls -> decls . vdecl [ VOID LIST INT EOF BOOL ]
decls -> decls . fdecl [ VOID LIST INT EOF BOOL ]
program -> decls . EOF [ # ]
## Transitions:
-- On VOID shift to state 3
-- On LIST shift to state 4
-- On INT shift to state 5
-- On EOF shift to state 8
-- On BOOL shift to state 6
-- On vdecl shift to state 9
-- On typ shift to state 10
-- On fdecl shift to state 133
## Reductions:

State 3:
## Known stack suffix:
## VOID
## LR(1) items:
typ -> VOID . [ ID ]
## Transitions:
## Reductions:
-- On ID
--   reduce production typ -> VOID

State 4:
## Known stack suffix:
## LIST
## LR(1) items:
typ -> LIST . typ [ ID ]
## Transitions:
-- On VOID shift to state 3
-- On LIST shift to state 4
-- On INT shift to state 5
-- On BOOL shift to state 6
-- On typ shift to state 7
## Reductions:

State 5:
## Known stack suffix:
## INT
## LR(1) items:
typ -> INT . [ ID ]
## Transitions:
## Reductions:
-- On ID
--   reduce production typ -> INT

State 6:
## Known stack suffix:
## BOOL
## LR(1) items:
typ -> BOOL . [ ID ]
## Transitions:
## Reductions:
-- On ID
--   reduce production typ -> BOOL

State 7:
## Known stack suffix:
## LIST typ
## LR(1) items:
typ -> LIST typ . [ ID ]
## Transitions:
## Reductions:
-- On ID
--   reduce production typ -> LIST typ

State 8:
## Known stack suffix:
## decls EOF
## LR(1) items:
program -> decls EOF . [ # ]
## Transitions:
## Reductions:
-- On #
--   reduce production program -> decls EOF

State 9:
## Known stack suffix:
## decls vdecl
## LR(1) items:
decls -> decls vdecl . [ VOID LIST INT EOF BOOL ]
## Transitions:
## Reductions:
-- On VOID LIST INT EOF BOOL
--   reduce production decls -> decls vdecl

State 10:
## Known stack suffix:
## typ
## LR(1) items:
fdecl -> typ . ID LPAREN formals_opt RPAREN LBRACE stmt_list RBRACE [ VOID LIST INT EOF BOOL ]
vdecl -> typ . ID SEMI [ VOID LIST INT EOF BOOL ]
vdecl -> typ . ID ASSIGN expr SEMI [ VOID LIST INT EOF BOOL ]
## Transitions:
-- On ID shift to state 11
## Reductions:

State 11:
## Known stack suffix:
## typ ID
## LR(1) items:
fdecl -> typ ID . LPAREN formals_opt RPAREN LBRACE stmt_list RBRACE [ VOID LIST INT EOF BOOL ]
vdecl -> typ ID . SEMI [ VOID LIST INT EOF BOOL ]
vdecl -> typ ID . ASSIGN expr SEMI [ VOID LIST INT EOF BOOL ]
## Transitions:
-- On SEMI shift to state 12
-- On LPAREN shift to state 13
-- On ASSIGN shift to state 117
## Reductions:

State 12:
## Known stack suffix:
## typ ID SEMI
## LR(1) items:
vdecl -> typ ID SEMI . [ WORD WHILE VOID RETURN RBRACE NOT NIBBLE MINUS LPAREN LITERAL LIST LBRACK LBRACE INT IF ID FOR EOF ELSE CHARLIT BYTE BOOL BLIT BIT BINNOT BINLITERAL ]
## Transitions:
## Reductions:
-- On WORD WHILE VOID RETURN RBRACE NOT NIBBLE MINUS LPAREN LITERAL LIST LBRACK LBRACE INT IF ID FOR EOF ELSE CHARLIT BYTE BOOL BLIT BIT BINNOT BINLITERAL
--   reduce production vdecl -> typ ID SEMI

State 13:
## Known stack suffix:
## typ ID LPAREN
## LR(1) items:
fdecl -> typ ID LPAREN . formals_opt RPAREN LBRACE stmt_list RBRACE [ VOID LIST INT EOF BOOL ]
## Transitions:
-- On VOID shift to state 3
-- On LIST shift to state 4
-- On INT shift to state 5
-- On BOOL shift to state 6
-- On typ shift to state 14
-- On formals_opt shift to state 16
-- On formal_list shift to state 129
## Reductions:
-- On RPAREN
--   reduce production formals_opt ->

State 14:
## Known stack suffix:
## typ
## LR(1) items:
formal_list -> typ . ID [ RPAREN COMMA ]
## Transitions:
-- On ID shift to state 15
## Reductions:

State 15:
## Known stack suffix:
## typ ID
## LR(1) items:
formal_list -> typ ID . [ RPAREN COMMA ]
## Transitions:
## Reductions:
-- On RPAREN COMMA
--   reduce production formal_list -> typ ID

State 16:
## Known stack suffix:
## typ ID LPAREN formals_opt
## LR(1) items:
fdecl -> typ ID LPAREN formals_opt . RPAREN LBRACE stmt_list RBRACE [ VOID LIST INT EOF BOOL ]
## Transitions:
-- On RPAREN shift to state 17
## Reductions:

State 17:
## Known stack suffix:
## typ ID LPAREN formals_opt RPAREN
## LR(1) items:
fdecl -> typ ID LPAREN formals_opt RPAREN . LBRACE stmt_list RBRACE [ VOID LIST INT EOF BOOL ]
## Transitions:
-- On LBRACE shift to state 18
## Reductions:

State 18:
## Known stack suffix:
## typ ID LPAREN formals_opt RPAREN LBRACE
## LR(1) items:
fdecl -> typ ID LPAREN formals_opt RPAREN LBRACE . stmt_list RBRACE [ VOID LIST INT EOF BOOL ]
## Transitions:
-- On stmt_list shift to state 19
## Reductions:
-- On WORD WHILE VOID RETURN RBRACE NOT NIBBLE MINUS LPAREN LITERAL LIST LBRACK LBRACE INT IF ID FOR CHARLIT BYTE BOOL BLIT BIT BINNOT BINLITERAL
--   reduce production stmt_list ->

State 19:
## Known stack suffix:
## typ ID LPAREN formals_opt RPAREN LBRACE stmt_list
## LR(1) items:
fdecl -> typ ID LPAREN formals_opt RPAREN LBRACE stmt_list . RBRACE [ VOID LIST INT EOF BOOL ]
stmt_list -> stmt_list . stmt [ WORD WHILE VOID RETURN RBRACE NOT NIBBLE MINUS LPAREN LITERAL LIST LBRACK LBRACE INT IF ID FOR CHARLIT BYTE BOOL BLIT BIT BINNOT BINLITERAL ]
## Transitions:
-- On WORD shift to state 20
-- On WHILE shift to state 21
-- On VOID shift to state 3
-- On RETURN shift to state 95
-- On RBRACE shift to state 128
-- On NOT shift to state 23
-- On NIBBLE shift to state 24
-- On MINUS shift to state 25
-- On LPAREN shift to state 26
-- On LITERAL shift to state 27
-- On LIST shift to state 4
-- On LBRACK shift to state 28
-- On LBRACE shift to state 99
-- On INT shift to state 5
-- On IF shift to state 102
-- On ID shift to state 29
-- On FOR shift to state 106
-- On CHARLIT shift to state 31
-- On BYTE shift to state 32
-- On BOOL shift to state 6
-- On BLIT shift to state 33
-- On BIT shift to state 34
-- On BINNOT shift to state 35
-- On BINLITERAL shift to state 36
-- On vdecl shift to state 114
-- On typ shift to state 115
-- On stmt shift to state 126
-- On expr shift to state 121
## Reductions:

State 20:
## Known stack suffix:
## WORD
## LR(1) items:
expr -> WORD . [ TIMES SEMI RSHIFT RPAREN RBRACK PLUS OR NEQ MINUS LT LSHIFT LEQ GT GEQ EQ DIVIDE CONCAT COMMA BINXOR BINOR BINAND AND ]
## Transitions:
## Reductions:
-- On TIMES SEMI RSHIFT RPAREN RBRACK PLUS OR NEQ MINUS LT LSHIFT LEQ GT GEQ EQ DIVIDE CONCAT COMMA BINXOR BINOR BINAND AND
--   reduce production expr -> WORD

State 21:
## Known stack suffix:
## WHILE
## LR(1) items:
stmt -> WHILE . LPAREN expr RPAREN stmt [ WORD WHILE VOID RETURN RBRACE NOT NIBBLE MINUS LPAREN LITERAL LIST LBRACK LBRACE INT IF ID FOR ELSE CHARLIT BYTE BOOL BLIT BIT BINNOT BINLITERAL ]
## Transitions:
-- On LPAREN shift to state 22
## Reductions:

State 22:
## Known stack suffix:
## WHILE LPAREN
## LR(1) items:
stmt -> WHILE LPAREN . expr RPAREN stmt [ WORD WHILE VOID RETURN RBRACE NOT NIBBLE MINUS LPAREN LITERAL LIST LBRACK LBRACE INT IF ID FOR ELSE CHARLIT BYTE BOOL BLIT BIT BINNOT BINLITERAL ]
## Transitions:
-- On WORD shift to state 20
-- On NOT shift to state 23
-- On NIBBLE shift to state 24
-- On MINUS shift to state 25
-- On LPAREN shift to state 26
-- On LITERAL shift to state 27
-- On LBRACK shift to state 28
-- On ID shift to state 29
-- On CHARLIT shift to state 31
-- On BYTE shift to state 32
-- On BLIT shift to state 33
-- On BIT shift to state 34
-- On BINNOT shift to state 35
-- On BINLITERAL shift to state 36
-- On expr shift to state 93
## Reductions:

State 23:
## Known stack suffix:
## NOT
## LR(1) items:
expr -> NOT . expr [ TIMES SEMI RSHIFT RPAREN RBRACK PLUS OR NEQ MINUS LT LSHIFT LEQ GT GEQ EQ DIVIDE CONCAT COMMA BINXOR BINOR BINAND AND ]
## Transitions:
-- On WORD shift to state 20
-- On NOT shift to state 23
-- On NIBBLE shift to state 24
-- On MINUS shift to state 25
-- On LPAREN shift to state 26
-- On LITERAL shift to state 27
-- On LBRACK shift to state 28
-- On ID shift to state 29
-- On CHARLIT shift to state 31
-- On BYTE shift to state 32
-- On BLIT shift to state 33
-- On BIT shift to state 34
-- On BINNOT shift to state 35
-- On BINLITERAL shift to state 36
-- On expr shift to state 92
## Reductions:

State 24:
## Known stack suffix:
## NIBBLE
## LR(1) items:
expr -> NIBBLE . [ TIMES SEMI RSHIFT RPAREN RBRACK PLUS OR NEQ MINUS LT LSHIFT LEQ GT GEQ EQ DIVIDE CONCAT COMMA BINXOR BINOR BINAND AND ]
## Transitions:
## Reductions:
-- On TIMES SEMI RSHIFT RPAREN RBRACK PLUS OR NEQ MINUS LT LSHIFT LEQ GT GEQ EQ DIVIDE CONCAT COMMA BINXOR BINOR BINAND AND
--   reduce production expr -> NIBBLE

State 25:
## Known stack suffix:
## MINUS
## LR(1) items:
expr -> MINUS . expr [ TIMES SEMI RSHIFT RPAREN RBRACK PLUS OR NEQ MINUS LT LSHIFT LEQ GT GEQ EQ DIVIDE CONCAT COMMA BINXOR BINOR BINAND AND ]
## Transitions:
-- On WORD shift to state 20
-- On NOT shift to state 23
-- On NIBBLE shift to state 24
-- On MINUS shift to state 25
-- On LPAREN shift to state 26
-- On LITERAL shift to state 27
-- On LBRACK shift to state 28
-- On ID shift to state 29
-- On CHARLIT shift to state 31
-- On BYTE shift to state 32
-- On BLIT shift to state 33
-- On BIT shift to state 34
-- On BINNOT shift to state 35
-- On BINLITERAL shift to state 36
-- On expr shift to state 91
## Reductions:

State 26:
## Known stack suffix:
## LPAREN
## LR(1) items:
expr -> LPAREN . expr RPAREN [ TIMES SEMI RSHIFT RPAREN RBRACK PLUS OR NEQ MINUS LT LSHIFT LEQ GT GEQ EQ DIVIDE CONCAT COMMA BINXOR BINOR BINAND AND ]
## Transitions:
-- On WORD shift to state 20
-- On NOT shift to state 23
-- On NIBBLE shift to state 24
-- On MINUS shift to state 25
-- On LPAREN shift to state 26
-- On LITERAL shift to state 27
-- On LBRACK shift to state 28
-- On ID shift to state 29
-- On CHARLIT shift to state 31
-- On BYTE shift to state 32
-- On BLIT shift to state 33
-- On BIT shift to state 34
-- On BINNOT shift to state 35
-- On BINLITERAL shift to state 36
-- On expr shift to state 89
## Reductions:

State 27:
## Known stack suffix:
## LITERAL
## LR(1) items:
expr -> LITERAL . [ TIMES SEMI RSHIFT RPAREN RBRACK PLUS OR NEQ MINUS LT LSHIFT LEQ GT GEQ EQ DIVIDE CONCAT COMMA BINXOR BINOR BINAND AND ]
## Transitions:
## Reductions:
-- On TIMES SEMI RSHIFT RPAREN RBRACK PLUS OR NEQ MINUS LT LSHIFT LEQ GT GEQ EQ DIVIDE CONCAT COMMA BINXOR BINOR BINAND AND
--   reduce production expr -> LITERAL

State 28:
## Known stack suffix:
## LBRACK
## LR(1) items:
expr -> LBRACK . list_fields RBRACK [ TIMES SEMI RSHIFT RPAREN RBRACK PLUS OR NEQ MINUS LT LSHIFT LEQ GT GEQ EQ DIVIDE CONCAT COMMA BINXOR BINOR BINAND AND ]
## Transitions:
-- On WORD shift to state 20
-- On NOT shift to state 23
-- On NIBBLE shift to state 24
-- On MINUS shift to state 25
-- On LPAREN shift to state 26
-- On LITERAL shift to state 27
-- On LBRACK shift to state 28
-- On ID shift to state 29
-- On CHARLIT shift to state 31
-- On BYTE shift to state 32
-- On BLIT shift to state 33
-- On BIT shift to state 34
-- On BINNOT shift to state 35
-- On BINLITERAL shift to state 36
-- On separated_nonempty_list(COMMA,expr) shift to state 82
-- On loption(separated_nonempty_list(COMMA,expr)) shift to state 83
-- On list_fields shift to state 84
-- On expr shift to state 86
## Reductions:
-- On RBRACK
--   reduce production loption(separated_nonempty_list(COMMA,expr)) ->

State 29:
## Known stack suffix:
## ID
## LR(1) items:
expr -> ID . [ TIMES SEMI RSHIFT RPAREN RBRACK PLUS OR NEQ MINUS LT LSHIFT LEQ GT GEQ EQ DIVIDE CONCAT COMMA BINXOR BINOR BINAND AND ]
expr -> ID . ASSIGN expr [ TIMES SEMI RSHIFT RPAREN RBRACK PLUS OR NEQ MINUS LT LSHIFT LEQ GT GEQ EQ DIVIDE CONCAT COMMA BINXOR BINOR BINAND AND ]
expr -> ID . LPAREN args_opt RPAREN [ TIMES SEMI RSHIFT RPAREN RBRACK PLUS OR NEQ MINUS LT LSHIFT LEQ GT GEQ EQ DIVIDE CONCAT COMMA BINXOR BINOR BINAND AND ]
## Transitions:
-- On LPAREN shift to state 30
-- On ASSIGN shift to state 80
## Reductions:
-- On TIMES SEMI RSHIFT RPAREN RBRACK PLUS OR NEQ MINUS LT LSHIFT LEQ GT GEQ EQ DIVIDE CONCAT COMMA BINXOR BINOR BINAND AND
--   reduce production expr -> ID

State 30:
## Known stack suffix:
## ID LPAREN
## LR(1) items:
expr -> ID LPAREN . args_opt RPAREN [ TIMES SEMI RSHIFT RPAREN RBRACK PLUS OR NEQ MINUS LT LSHIFT LEQ GT GEQ EQ DIVIDE CONCAT COMMA BINXOR BINOR BINAND AND ]
## Transitions:
-- On WORD shift to state 20
-- On NOT shift to state 23
-- On NIBBLE shift to state 24
-- On MINUS shift to state 25
-- On LPAREN shift to state 26
-- On LITERAL shift to state 27
-- On LBRACK shift to state 28
-- On ID shift to state 29
-- On CHARLIT shift to state 31
-- On BYTE shift to state 32
-- On BLIT shift to state 33
-- On BIT shift to state 34
-- On BINNOT shift to state 35
-- On BINLITERAL shift to state 36
-- On expr shift to state 38
-- On args_opt shift to state 75
-- On args_list shift to state 77
## Reductions:
-- On RPAREN
--   reduce production args_opt ->

State 31:
## Known stack suffix:
## CHARLIT
## LR(1) items:
expr -> CHARLIT . [ TIMES SEMI RSHIFT RPAREN RBRACK PLUS OR NEQ MINUS LT LSHIFT LEQ GT GEQ EQ DIVIDE CONCAT COMMA BINXOR BINOR BINAND AND ]
## Transitions:
## Reductions:
-- On TIMES SEMI RSHIFT RPAREN RBRACK PLUS OR NEQ MINUS LT LSHIFT LEQ GT GEQ EQ DIVIDE CONCAT COMMA BINXOR BINOR BINAND AND
--   reduce production expr -> CHARLIT

State 32:
## Known stack suffix:
## BYTE
## LR(1) items:
expr -> BYTE . [ TIMES SEMI RSHIFT RPAREN RBRACK PLUS OR NEQ MINUS LT LSHIFT LEQ GT GEQ EQ DIVIDE CONCAT COMMA BINXOR BINOR BINAND AND ]
## Transitions:
## Reductions:
-- On TIMES SEMI RSHIFT RPAREN RBRACK PLUS OR NEQ MINUS LT LSHIFT LEQ GT GEQ EQ DIVIDE CONCAT COMMA BINXOR BINOR BINAND AND
--   reduce production expr -> BYTE

State 33:
## Known stack suffix:
## BLIT
## LR(1) items:
expr -> BLIT . [ TIMES SEMI RSHIFT RPAREN RBRACK PLUS OR NEQ MINUS LT LSHIFT LEQ GT GEQ EQ DIVIDE CONCAT COMMA BINXOR BINOR BINAND AND ]
## Transitions:
## Reductions:
-- On TIMES SEMI RSHIFT RPAREN RBRACK PLUS OR NEQ MINUS LT LSHIFT LEQ GT GEQ EQ DIVIDE CONCAT COMMA BINXOR BINOR BINAND AND
--   reduce production expr -> BLIT

State 34:
## Known stack suffix:
## BIT
## LR(1) items:
expr -> BIT . [ TIMES SEMI RSHIFT RPAREN RBRACK PLUS OR NEQ MINUS LT LSHIFT LEQ GT GEQ EQ DIVIDE CONCAT COMMA BINXOR BINOR BINAND AND ]
## Transitions:
## Reductions:
-- On TIMES SEMI RSHIFT RPAREN RBRACK PLUS OR NEQ MINUS LT LSHIFT LEQ GT GEQ EQ DIVIDE CONCAT COMMA BINXOR BINOR BINAND AND
--   reduce production expr -> BIT

State 35:
## Known stack suffix:
## BINNOT
## LR(1) items:
expr -> BINNOT . expr [ TIMES SEMI RSHIFT RPAREN RBRACK PLUS OR NEQ MINUS LT LSHIFT LEQ GT GEQ EQ DIVIDE CONCAT COMMA BINXOR BINOR BINAND AND ]
## Transitions:
-- On WORD shift to state 20
-- On NOT shift to state 23
-- On NIBBLE shift to state 24
-- On MINUS shift to state 25
-- On LPAREN shift to state 26
-- On LITERAL shift to state 27
-- On LBRACK shift to state 28
-- On ID shift to state 29
-- On CHARLIT shift to state 31
-- On BYTE shift to state 32
-- On BLIT shift to state 33
-- On BIT shift to state 34
-- On BINNOT shift to state 35
-- On BINLITERAL shift to state 36
-- On expr shift to state 37
## Reductions:

State 36:
## Known stack suffix:
## BINLITERAL
## LR(1) items:
expr -> BINLITERAL . [ TIMES SEMI RSHIFT RPAREN RBRACK PLUS OR NEQ MINUS LT LSHIFT LEQ GT GEQ EQ DIVIDE CONCAT COMMA BINXOR BINOR BINAND AND ]
## Transitions:
## Reductions:
-- On TIMES SEMI RSHIFT RPAREN RBRACK PLUS OR NEQ MINUS LT LSHIFT LEQ GT GEQ EQ DIVIDE CONCAT COMMA BINXOR BINOR BINAND AND
--   reduce production expr -> BINLITERAL

State 37:
## Known stack suffix:
## BINNOT expr
## LR(1) items:
expr -> BINNOT expr . [ TIMES SEMI RSHIFT RPAREN RBRACK PLUS OR NEQ MINUS LT LSHIFT LEQ GT GEQ EQ DIVIDE CONCAT COMMA BINXOR BINOR BINAND AND ]
expr -> expr . BINAND expr [ TIMES SEMI RSHIFT RPAREN RBRACK PLUS OR NEQ MINUS LT LSHIFT LEQ GT GEQ EQ DIVIDE CONCAT COMMA BINXOR BINOR BINAND AND ]
expr -> expr . LSHIFT expr [ TIMES SEMI RSHIFT RPAREN RBRACK PLUS OR NEQ MINUS LT LSHIFT LEQ GT GEQ EQ DIVIDE CONCAT COMMA BINXOR BINOR BINAND AND ]
expr -> expr . RSHIFT expr [ TIMES SEMI RSHIFT RPAREN RBRACK PLUS OR NEQ MINUS LT LSHIFT LEQ GT GEQ EQ DIVIDE CONCAT COMMA BINXOR BINOR BINAND AND ]
expr -> expr . CONCAT expr [ TIMES SEMI RSHIFT RPAREN RBRACK PLUS OR NEQ MINUS LT LSHIFT LEQ GT GEQ EQ DIVIDE CONCAT COMMA BINXOR BINOR BINAND AND ]
expr -> expr . BINXOR expr [ TIMES SEMI RSHIFT RPAREN RBRACK PLUS OR NEQ MINUS LT LSHIFT LEQ GT GEQ EQ DIVIDE CONCAT COMMA BINXOR BINOR BINAND AND ]
expr -> expr . BINOR expr [ TIMES SEMI RSHIFT RPAREN RBRACK PLUS OR NEQ MINUS LT LSHIFT LEQ GT GEQ EQ DIVIDE CONCAT COMMA BINXOR BINOR BINAND AND ]
expr -> expr . PLUS expr [ TIMES SEMI RSHIFT RPAREN RBRACK PLUS OR NEQ MINUS LT LSHIFT LEQ GT GEQ EQ DIVIDE CONCAT COMMA BINXOR BINOR BINAND AND ]
expr -> expr . MINUS expr [ TIMES SEMI RSHIFT RPAREN RBRACK PLUS OR NEQ MINUS LT LSHIFT LEQ GT GEQ EQ DIVIDE CONCAT COMMA BINXOR BINOR BINAND AND ]
expr -> expr . TIMES expr [ TIMES SEMI RSHIFT RPAREN RBRACK PLUS OR NEQ MINUS LT LSHIFT LEQ GT GEQ EQ DIVIDE CONCAT COMMA BINXOR BINOR BINAND AND ]
expr -> expr . DIVIDE expr [ TIMES SEMI RSHIFT RPAREN RBRACK PLUS OR NEQ MINUS LT LSHIFT LEQ GT GEQ EQ DIVIDE CONCAT COMMA BINXOR BINOR BINAND AND ]
expr -> expr . EQ expr [ TIMES SEMI RSHIFT RPAREN RBRACK PLUS OR NEQ MINUS LT LSHIFT LEQ GT GEQ EQ DIVIDE CONCAT COMMA BINXOR BINOR BINAND AND ]
expr -> expr . NEQ expr [ TIMES SEMI RSHIFT RPAREN RBRACK PLUS OR NEQ MINUS LT LSHIFT LEQ GT GEQ EQ DIVIDE CONCAT COMMA BINXOR BINOR BINAND AND ]
expr -> expr . LT expr [ TIMES SEMI RSHIFT RPAREN RBRACK PLUS OR NEQ MINUS LT LSHIFT LEQ GT GEQ EQ DIVIDE CONCAT COMMA BINXOR BINOR BINAND AND ]
expr -> expr . LEQ expr [ TIMES SEMI RSHIFT RPAREN RBRACK PLUS OR NEQ MINUS LT LSHIFT LEQ GT GEQ EQ DIVIDE CONCAT COMMA BINXOR BINOR BINAND AND ]
expr -> expr . GT expr [ TIMES SEMI RSHIFT RPAREN RBRACK PLUS OR NEQ MINUS LT LSHIFT LEQ GT GEQ EQ DIVIDE CONCAT COMMA BINXOR BINOR BINAND AND ]
expr -> expr . GEQ expr [ TIMES SEMI RSHIFT RPAREN RBRACK PLUS OR NEQ MINUS LT LSHIFT LEQ GT GEQ EQ DIVIDE CONCAT COMMA BINXOR BINOR BINAND AND ]
expr -> expr . AND expr [ TIMES SEMI RSHIFT RPAREN RBRACK PLUS OR NEQ MINUS LT LSHIFT LEQ GT GEQ EQ DIVIDE CONCAT COMMA BINXOR BINOR BINAND AND ]
expr -> expr . OR expr [ TIMES SEMI RSHIFT RPAREN RBRACK PLUS OR NEQ MINUS LT LSHIFT LEQ GT GEQ EQ DIVIDE CONCAT COMMA BINXOR BINOR BINAND AND ]
## Transitions:
## Reductions:
-- On TIMES SEMI RSHIFT RPAREN RBRACK PLUS OR NEQ MINUS LT LSHIFT LEQ GT GEQ EQ DIVIDE CONCAT COMMA BINXOR BINOR BINAND AND
--   reduce production expr -> BINNOT expr
